--- a/Recipe.html
+++ b/Recipe.html
@@ -17,7 +17,7 @@
 
             <main>
                 <section>
-                    <h2> Ingredients</h2>
+                    <h2>Ingredients</h2>
                     <ul>
                         <li>2 cups of flour</li>
                         <li>1 cup of sugagr</li>
@@ -25,10 +25,45 @@
                         <li>2 eggs</li>
                         <li>1 cup of chocolate chips</li>
                         <li>Optional:</li>
-                        
                     </ul>
-
+                            <ol type="a">
+                                <li>1/2 cup of nuts</li>
+                                <li>1/4 cup of raisins</li>
+                            </ol>
                 </section>
+
+                <section>
+                    <h2>Steps</h2>
+                    <ol type="1">
+                        <li>Preheat the oven 350°F (175°C).</li>
+                        <li>Mix the dry ingredients in a large bowl.</li>
+                        <li>In a seperate bowl, mix the wet ingredients.</li>
+                        <li>Combine the wet and dry ingredients, then add chocolate chips.</li>
+                        <li>Bake for 10-12 minutes until golden brown.</li>
+                    </ol>        
+
+                    <img src="https://images.pexels.com/photos/14580494/pexels-photo-14580494.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                        width="250"
+                        height="200" 
+                        alt="Image of a stack of cookies"/> 
+                        <figcaption>Delicious homemade chocolate chip cookies</figcaption>
+                </section>  
+
+                <section>
+                    <h2>Tips and Variations</h2>
+                    <aside>
+                        <ul>
+                            <li>Use brown sugar for a richer flavor.</li>
+                            <li>Add nuts for extra crunch.</li>
+                            <li>Replace butter with coconut oil for a vegan option.</li>
+                        </ul>
+                    </aside>
+                </section>
+                <footer>
+                    <p>© 2025 Kesia John</p>
+                    <p>Image taken from <a href=''>here</a> </p>
+                </footer>    
+                
             </main>
         </body>
     </html>
