Finish task 1 recipes

--- a/Recipe.html
+++ b/Recipe.html
@@ -11,31 +11,34 @@
         <title>Grandma's Chocolate Chip Cookies</title>
         </head>
         <body>
+            <!-- Header -->
             <header>
-                <h1>Grandama's Chocolate Chip Cookies</h1>
+                <h1>Grandma's Chocolate Chip Cookies</h1>
             </header>
 
             <main>
+                <!-- 1st section -->
                 <section>
                     <h2>Ingredients</h2>
                     <ul>
                         <li>2 cups of flour</li>
-                        <li>1 cup of sugagr</li>
+                        <li>1 cup of sugar</li>
                         <li>1 cup of butter</li>
                         <li>2 eggs</li>
                         <li>1 cup of chocolate chips</li>
                         <li>Optional:</li>
-                    </ul>
+                
                             <ol type="a">
                                 <li>1/2 cup of nuts</li>
                                 <li>1/4 cup of raisins</li>
                             </ol>
+                    </ul>
                 </section>
-
+                <!-- 2nd section -->
                 <section>
                     <h2>Steps</h2>
                     <ol type="1">
-                        <li>Preheat the oven 350°F (175°C).</li>
+                        <li>Preheat the oven to 350°F (175°C).</li>
                         <li>Mix the dry ingredients in a large bowl.</li>
                         <li>In a seperate bowl, mix the wet ingredients.</li>
                         <li>Combine the wet and dry ingredients, then add chocolate chips.</li>
@@ -48,7 +51,7 @@
                         alt="Image of a stack of cookies"/> 
                         <figcaption>Delicious homemade chocolate chip cookies</figcaption>
                 </section>  
-
+                <!-- 3rd section -->
                 <section>
                     <h2>Tips and Variations</h2>
                     <aside>
@@ -59,9 +62,10 @@
                         </ul>
                     </aside>
                 </section>
+                <!-- footer -->
                 <footer>
                     <p>© 2025 Kesia John</p>
-                    <p>Image taken from <a href=''>here</a> </p>
+                    <p>Image taken from <a href=''>Here</a> </p>
                 </footer>    
                 
             </main>
