Finished adding my 3 favorite books

--- a/Favorite Books.html
+++ b/Favorite Books.html
@@ -4,7 +4,7 @@
 </html>
     <html>
         <head>
-            
+
             <meta charset="utf-8"/>
             <meta name="viewpoint" content="width=device-width, initial-scale=1"/>
 
@@ -20,6 +20,7 @@
                 <section>
                     <h2>Top 3 Books</h2>
                     <ul>
+                        <!--First Book-->
                         <li>
                             <a href="https://www.goodreads.com/book/show/169690624-picking-daisies-on-sundays?from_search=true&from_srp=true&qid=SBw7eU6ChA&rank=1" target="_blank">
                                 <img src="https://www.elocalshops.com/cdn/shop/articles/Picking_Daisies_On_Sundays_by_Liana_Cincotti_books_bookworm_booklover_bookmark_friendstolovers_lovestory_romancebook_romanceauthor_romancereader_1200x1556.jpg?v=1714316715"
@@ -32,6 +33,7 @@
                             <figcaption>"She lives in between the pinks and yellows of the world where a beautiful color 
                                 is unknowing to others"</figcaption>                       
                         </li>
+                        <!--Second Book-->
                         <li>
                             <a href="https://www.goodreads.com/book/show/4671.The_Great_Gatsby" target="_blank">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/The_Great_Gatsby_Cover_1925_Retouched.jpg/640px-The_Great_Gatsby_Cover_1925_Retouched.jpg"
@@ -41,6 +43,19 @@
                             </a>
 
                             <figcaption>The Great Gatsby by F.Scott Fitzgerald</figcaption>
+                            <figcaption>"I wasn't actually in love, but I felt sort of tender curiosity"</figcaption>
+                        </li>
+                        <!--Third Book-->
+                        <li>
+                            <a href="https://www.goodreads.com/book/show/3228917-outliers" target="_blank">
+                                <img src="https://m.media-amazon.com/images/I/91lYcUJ8JsL.jpg"
+                            width="190"
+                            height="230"
+                            alt="Third Book">            
+                            </a>
+
+                            <figcaption>Outliers: The Story of Success by Malcome Gladwell</figcaption>
+                            <figcaption>"Practice isn't the thing you do once you're good. It's the thing you do that makes you good"</figcaption>
                         </li>
                     </ul>
                 </section>
