--- a/Favorite Books.html
+++ b/Favorite Books.html
@@ -11,6 +11,7 @@
             <title>My Favorite Books</title>
         </head>
         <body>
+            <!--Header-->
             <header>
                 <h1>My Favorite Books</h1>
             </header>
@@ -28,7 +29,7 @@
                             height="250"
                             alt="First Book">
                             </a> 
-                           
+                           <!--Caption-->
                             <figcaption>Picking Daisies on Sunday by Liana Cincotti</figcaption>
                             <figcaption>"She lives in between the pinks and yellows of the world where a beautiful color 
                                 is unknowing to others"</figcaption>                       
@@ -41,7 +42,7 @@
                             height="250"
                             alt="Second Book">
                             </a>
-
+                            <!--Caption-->
                             <figcaption>The Great Gatsby by F.Scott Fitzgerald</figcaption>
                             <figcaption>"I wasn't actually in love, but I felt sort of tender curiosity"</figcaption>
                         </li>
@@ -53,7 +54,7 @@
                             height="230"
                             alt="Third Book">            
                             </a>
-
+                            <!--Caption-->
                             <figcaption>Outliers: The Story of Success by Malcome Gladwell</figcaption>
                             <figcaption>"Practice isn't the thing you do once you're good. It's the thing you do that makes you good"</figcaption>
                         </li>
