Added some more comments

--- a/My Favorite Books.html
+++ b/My Favorite Books.html
@@ -7,7 +7,7 @@
 
             <meta charset="utf-8"/>
             <meta name="viewpoint" content="width=device-width, initial-scale=1"/>
-
+            <!--Title-->
             <title>My Favorite Books</title>
         </head>
         <body>
