--- a/Recipe.html
+++ b/Recipe.html
@@ -7,7 +7,7 @@
         
         <meta charset="utf-8"/>
         <meta name="viewpoint" cotent="width=device-width, initial-scale=1" />
-        
+        <!--Title-->
         <title>Grandma's Chocolate Chip Cookies</title>
         </head>
         <body>
